--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.4",
     "font-awesome": "^4.7.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
